--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -4,63 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foto Serie</title>
+    <link rel="stylesheet" href="CSS/nav-bar.css">
     <link rel="stylesheet" href="CSS/FotoSerie.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
+    <!--Nav Bar-->
     <nav>
         <ul>
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="#">Andre</a>
+                <ul class="dropdown">
+                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="#">Log</a></li>
+                </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
-                    <li><a href="bent.html">Bent</a></li>
+                    <li><a href="bent.html" target="_blank">Bent</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
 
-    <div class="fuckCSSdivcenter">
+    <div class="Video-Center">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PahdXf6Jzf4?si=TFkdnF-Fe-Zg3g2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   
 
     <section class="bilde-serie">
 
+        <div class="bilde-align">
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1068.jpg" alt="">
+            </div>
+                
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1070.jpg" alt="">
+            </div>    
 
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1068.jpg" alt="">
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1090.jpg" alt="">
+            </div>  
+
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1091.jpg" alt="">
+            </div>  
+
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1092.jpg" alt="">
+            </div> 
+
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1093.jpg" alt="">
+            </div>   
+
+            <div class="bilde-con">
+                <img src="Bilder/Fotoserie/IMG_1097.jpg" alt="">
+            </div>
         </div>
-               
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1070.jpg" alt="">
-        </div>    
-
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1090.jpg" alt="">
-        </div>  
-
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1091.jpg" alt="">
-        </div>  
-
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1092.jpg" alt="">
-        </div> 
-
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1093.jpg" alt="">
-        </div>   
-
-        <div class="bilde-con">
-            <img src="Bilder/Fotoserie/IMG_1097.jpg" alt="">
-        </div>
-
 
     </section>
