--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prosjekter</title>
+    <link rel="stylesheet" href="CSS/nav-bar.css">
     <link rel="stylesheet" href="CSS/JavaScript.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
-    
+
 
 </head>
 <body>
@@ -16,7 +17,11 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">Andre</a>
+                <ul class="dropdown">
+                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="#">Log</a></li>
+                </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -29,7 +34,7 @@
     </nav>
 
     <section class="JS-Input">
-        <!-- Task Input Box -->
+        <!-- Task box -->
         <div class="box-pos">
             <div class="box-frame">
                 <h1>Task Manager</h1>
@@ -57,7 +62,8 @@
                 </div>
             </div>
         </div>
-    
+
+        <!-- Another Feature-->
         <div class="box-pos">
             <div class="box-frame">
                 <h1>Another Feature</h1>
@@ -69,3 +75,4 @@
 </body>
 <script src="../JavaScript/Løkker.js" defer></script>
 <script src="../JavaScript/JSmål_4_11.js" defer></script>
+</html>
