--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Meg</title>
+    <link rel="stylesheet" href="CSS/nav-bar.css">
     <link rel="stylesheet" href="CSS/Om MegStyles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body><!--Nav Bar-->
     <nav>
         <ul>
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="#">Om</a></li>
-            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="#">Andre</a>
+                <ul class="dropdown">
+                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="#">Log</a></li>
+                </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -26,16 +31,21 @@
     </nav>
 
 
+    <section class="info">
+            <div class="info-tekst">
+                
+            </div>
+    </section>
+    <footer>
+        <section class="credit">
+            <div class="credit-content">
+                <ul>
+                    <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
+                </ul>
+            </div>
+    
+        </section>
+    </footer>
 </body>
 
-<footer>
-    <section class="credit">
-        <div class="credit-content">
-            <ul>
-                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
-            </ul>
-        </div>
-
-    </section>
-</footer>
 </html>
