--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prosjekter</title>
+    <link rel="stylesheet" href="CSS/nav-bar.css">
     <link rel="stylesheet" href="CSS/ProsjekterStyles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
@@ -12,9 +13,14 @@
     <nav>
         <ul>
             <li><a href="../index.html">Hjem</a></li>
-            <li><a href="#">Prosjekter</a></li>
+            <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="#">Andre</a>
+                <ul class="dropdown">
+                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="#">Log</a></li>
+                </ul>
+            </li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -26,23 +32,23 @@
         </ul>
     </nav>
 
-
+<!--Header-->
 <section class="header">
     <div class="header-box">
          <div class="header-content">
              <h1>Prosjekter jeg har jobbet med!</h1>
-             <p></p>
         </div>
     </div>
 </section>
 
 
-    <!-- Konteinere med prosjekter-->
+    <!-- Konteinere med prosjekter 1 til 3-->
     <section class="Prosjekt-Top">
 
 
         <div class="Project-box">
             <div class="Project-content">
+                <!--Bilde, titel og undertekst-->
                 <div class="picture">
                     <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
                 </div>  
@@ -73,7 +79,7 @@
     </section>
 
 
-
+<!--
     <section class="Prosjekt-Bottom">
 
 
@@ -102,11 +108,9 @@
         </div>
 
     </section>
+-->
 
-
-</body>
-
-
+<!--Credit-->
 <footer>
     <section class="Footer-box">
         <div class="Footer-content">
@@ -117,4 +121,9 @@
 
     </section>
 </footer>
+
+</body>
+
+
+
 </html>
