--- a/index.html
+++ b/index.html
@@ -4,46 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viggo's Nettside</title>
+    <link rel="stylesheet" href="Min Side/CSS/nav-bar.css">
     <link rel="stylesheet" href="Min Side/CSS/Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <nav>
+    <nav> <!-- Nav Bar-->
         <ul>
             <li><a href="index.html">Hjem</a></li>
             <li><a href="Min Side/Prosjekter.html">Prosjekter</a></li>
             <li><a href="Min Side/Om Meg.html">Om</a></li>
-            <li><a href="Min Side/JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="#">Andre</a>
+                <ul class="dropdown">
+                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="#">Log</a></li>
+                </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
-                    <li><a href="Min Side/bent.html">Bent</a></li>
+                    <li><a href="Min Side/bent.html" target="_blank">Bent</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
-
+    <!--Header text-->
     <section class="head">
-
         <div class="container">
             <div class="head-content">
                 <p>Viggo Weissmuller</p>
                 <h1>Her finner du info om meg <br> og hva jeg har jobbet med</h1>
             </div>
         </div>
-
-</body>
-<footer>
-    <section class="credit">
-        <div class="credit-content">
-            <ul>
-                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
-            </ul>
-        </div>
-
     </section>
-</footer>
+
+    <!--Giving Credit-->
+    <footer>
+        <section class="credit">
+            <div class="credit-content">
+                <ul>
+                    <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
+                </ul>
+            </div>
+
+        </section>
+    </footer>
+</body>
+
 </html>
