--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Meg</title>
     <link rel="stylesheet" href="CSS/nav-bar.css">
-    <link rel="stylesheet" href="CSS/Om MegStyles.css">
+    <link rel="stylesheet" href="CSS/log.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body><!--Nav Bar-->
@@ -17,7 +17,7 @@
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Log</a></li>
+                    <li><a href="#">Log</a></li>
                 </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
@@ -31,45 +31,7 @@
     </nav>
 
 
-<section class="about">
-    <div class="about-con">
-        <div class="about-text">
-            <h1>Meg</h1>
-            <p>Hei, mitt navn er Viggo og jeg går på Amalie Skram Vidergående skole. Der går jeg Informasjonsteknologi og Medieproduksjons linjen (IM).</p>
-        </div>
-        <img src="bilder/Amalie vgs.png" alt="pic">
-    </div>
-    <div class="about-con">
-        <div class="about-text">
-            <h1></h1>
-            <p></p>
-            <div class="img">
-                <img src="" alt="pic">
-            </div>
-        </div>
-    </div>
-    <div class="about-con">
-        <div class="about-text">
-            <h1></h1>
-            <p></p>
-            <div class="img">
-                <img src="" alt="pic">
-            </div>
-        </div>
-    </div>
 
-</section>
 
-    <footer>
-        <section class="credit">
-            <div class="credit-content">
-                <ul>
-                    <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
-                </ul>
-            </div>
-    
-        </section>
-    </footer>
 </body>
-
 </html>
