--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -19,7 +19,7 @@
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="#">Log</a></li>
+                    <li><a href="log.html">Log</a></li>
                 </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
