--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -15,7 +15,7 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Andre</a>
+            <li><a href="log.html">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
                     <li><a href="#">Log</a></li>
@@ -78,7 +78,7 @@
 
     </section>
 
-
+    
 <!--
     <section class="Prosjekt-Bottom">
 
