--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viggo's Nettside</title>
+    <!-- External CSS files for navigation and general styles -->
     <link rel="stylesheet" href="Min Side/CSS/nav-bar.css">
     <link rel="stylesheet" href="Min Side/CSS/Styles.css">
+    <!-- Google Fonts: Poppins with various weights -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <nav> <!-- Nav Bar-->
+    <!-- Navigation bar with dropdown menus -->
+    <nav>
         <ul>
             <li><a href="index.html">Hjem</a></li>
             <li><a href="Min Side/Prosjekter.html">Prosjekter</a></li>
             <li><a href="Min Side/Om Meg.html">Om</a></li>
+            <!-- Dropdown menu for "Andre" -->
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="#">Log</a></li>
+                    <li><a href="Min Side/log.html">Log</a></li>
                 </ul>
+            <!-- Dropdown menu for "Ressurser/Hjelp" -->
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
+                    <!-- External resources open in new tabs -->
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
@@ -30,27 +36,28 @@
             </li>
         </ul>
     </nav>
-    <!--Header text-->
+    <!-- Header section with introduction -->
     <section class="head">
         <div class="container">
             <div class="head-content">
+                <!-- Author's name -->
                 <p>Viggo Weissmuller</p>
+                <!-- Site description with line break for better formatting -->
                 <h1>Her finner du info om meg <br> og hva jeg har jobbet med</h1>
             </div>
         </div>
     </section>
 
-    <!--Giving Credit-->
+    <!-- Footer section for image credits -->
     <footer>
         <section class="credit">
             <div class="credit-content">
                 <ul>
+                    <!-- Credit to image author with link to their profile -->
                     <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
                 </ul>
             </div>
-
         </section>
     </footer>
 </body>
-
 </html>
