Log and Live Search function

--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/log.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="">
+    <script src="JS/log.js" defer></script>
 </head>
 <body><!--Nav Bar-->
     <nav>
@@ -34,7 +35,7 @@
     <!-- Search Bar -->
     <header class="search-bar">
         <div class="search-container">
-            <input type="text" id="search" placeholder="Søk etter dato eller tittel...">
+            <input type="text" id="search" placeholder="Skriv i Søkefelte...">
             <img src="Bilder/Blue-search-icon.png" alt="Søk ikon" id= "search-icon"class="search-icon">
         </div>
     </header>
@@ -59,7 +60,6 @@
 
     </section>
 
-<script scr="JS/log.js" defer></script>
 
 </body>
 </html>
