--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -36,7 +36,6 @@
     <header class="search-bar">
         <div class="search-container">
             <input type="text" id="search" placeholder="Skriv i Søkefelte...">
-            <img src="Bilder/Blue-search-icon.png" alt="Søk ikon" id= "search-icon"class="search-icon">
         </div>
     </header>
 
@@ -53,9 +52,10 @@
             <p>Logginnhold her...</p>
         </div>
 
-        <div class="log">
-            <h3>06 / 12 / 24</h3>
-            <p>Logginnhold her...</p>
+        <div class="log" class="december">
+            
+            <h3>06.12.24</h3>
+            <p>Er ganske seint ute men fikk endelig lagd logg. Endret bakgrunn på "Om" Siden til å være den samme som på "Prosjekter". Lagde disse log konteinerene og et søkefelt som faktisk funker og er live. Det funket ikke helt til å begynne med fordi JS filen bare ble ikke tilkoblet riktig men jeg flytet script scr="" fra bunnen av body til head og da fungerte det.</p>
         </div>
 
     </section>
