--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="CSS/nav-bar.css">
     <link rel="stylesheet" href="CSS/JavaScript.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-
+    <script src="JS/JavaScript_feat_Bent.js" defer></script>
+    <script src="JS/JavaScript_feat_Bent.js" defer></script>
 
 
 </head>
@@ -72,7 +73,6 @@
             </div>
         </div>
     </section>
+
 </body>
-<script src="../JavaScript/Løkker.js" defer></script>
-<script src="../JavaScript/JSmål_4_11.js" defer></script>
 </html>
