--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -60,18 +60,20 @@
     <section class="logs" id="logSection">
 
         <div class="log" id="december">
-            <h3>Ingen</h3>
-            <p>Logginnhold her...</p>
+            <h3>N/A</h3>
+            <h6>N/A</h6>
+            <p>N/A</p>
         </div>
 
-        <div class="log", id="december">
-            <h3>Igår</h3>
-            <p>Logginnhold her...</p>
+        <div class="log", id="december" id="Monday">
+            <h3>Filtere!!!!</h3>
+            <h6>Mandag - 09/12/2024</h6>
+            <p>La til måndes filter ved siden av søkefeltet og det funker veldig bra. Den søker etter ID på elementene som sier hvilken måned de er.</p>
         </div>
 
         <div class="log" id="december" id="Friday">
-            
-            <h3>Fredag 06.12.24</h3>
+            <h3>Oppretting av logg</h3>
+            <h6>Fredag - 06/12/2024</h6>
             <p>Er ganske seint ute men fikk endelig lagd logg. Endret bakgrunn på "Om" Siden til å være den samme som på "Prosjekter". Lagde disse log konteinerene og et søkefelt som faktisk funker og er live. Det funket ikke helt til å begynne med fordi JS filen bare ble ikke tilkoblet riktig men jeg flytet script scr="" fra bunnen av body til head og da fungerte det.</p>
         </div>
 
