--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -59,14 +59,20 @@
     <!-- Log Section -->
     <section class="logs" id="logSection">
 
-        <div class="log" id="december">
-            <h3>N/A</h3>
-            <h6>N/A</h6>
+        <div class="log" id="december" id="Wednesday">
+            <h3>SIde Vurdering</h3>
+            <h6>18/12/2024</h6>
             <p>N/A</p>
         </div>
 
+        <div class="log" id="december" id="Wednesday">
+            <h3></h3>
+            <h6>11/12/2024</h6>
+            <p>Diverse styling på log siden</p>
+        </div>
+
         <div class="log", id="december" id="Monday">
-            <h3>Filtere!!!!</h3>
+            <h3>Filtere</h3>
             <h6>Mandag - 09/12/2024</h6>
             <p>La til måndes filter ved siden av søkefeltet og det funker veldig bra. Den søker etter ID på elementene som sier hvilken måned de er.</p>
         </div>
