--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Dropdown menu for "Andre" -->
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
+                    <li><a href="Min Side/JavaScript_feat_Bent.html">JS</a></li>
                     <li><a href="Min Side/log.html">Log</a></li>
                 </ul>
             <!-- Dropdown menu for "Ressurser/Hjelp" -->
