--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -20,7 +20,7 @@
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Log</a></li>
+                    <li><a href="log.html">Logg</a></li>
                 </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
