--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="Min Side/JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="Min Side/log.html">Log</a></li>
+                    <li><a href="Min Side/log.html">Logg</a></li>
                 </ul>
             <!-- Dropdown menu for "Ressurser/Hjelp" -->
             <li><a href="#">Ressurser/Hjelp</a> 
