--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -18,7 +18,7 @@
             <li><a href="log.html">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="#">Log</a></li>
+                    <li><a href="log.html">Logg</a></li>
                 </ul>
             </li>
             <li><a href="#">Ressurser/Hjelp</a> 
