--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -19,7 +19,7 @@
             <li><a href="#">Andre</a>
                 <ul class="dropdown">
                     <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Log</a></li>
+                    <li><a href="log.html">Logg</a></li>
                 </ul>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
@@ -60,14 +60,14 @@
     <section class="logs" id="logSection">
 
         <div class="log" id="december" id="Wednesday">
-            <h3>SIde Vurdering</h3>
-            <h6>18/12/2024</h6>
+            <h3>Side Vurdering og diverse</h3>
+            <h6>Onsdag - 18/12/2024</h6>
             <p>N/A</p>
         </div>
 
         <div class="log" id="december" id="Wednesday">
             <h3></h3>
-            <h6>11/12/2024</h6>
+            <h6>Onsdag - 11/12/2024</h6>
             <p>Diverse styling på log siden</p>
         </div>
 
