--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -17,11 +17,8 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Logg</a></li>
-                </ul>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -63,10 +60,10 @@
             </div>
         </div>
 
-        <!-- Another Feature-->
+        <!-- Future Feature-->
         <div class="box-pos">
             <div class="box-frame">
-                <h1>Another Feature</h1>
+                <h1>N/A</h1>
                 <div class="box-content">
                 </div>
             </div>
