--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -15,12 +15,8 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="log.html">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Logg</a></li>
-                </ul>
-            </li>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -32,7 +28,7 @@
         </ul>
     </nav>
 
-<!--Header-->
+<!-- Header section with title -->
 <section class="header">
     <div class="header-box">
          <div class="header-content">
@@ -41,76 +37,71 @@
     </div>
 </section>
 
-
-    <!-- Konteinere med prosjekter 1 til 3-->
-    <section class="Prosjekt-Top">
-
-
-        <div class="Project-box">
-            <div class="Project-content">
-                <!--Bilde, titel og undertekst-->
-                <div class="picture">
-                    <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
-                </div>  
-                <h1>Min Side</h1>
-                <p>Siden du er på nå! Det er prosjektet vi jobber med i Konseptutvikling og Programmering med Bent</p>
-            </div>
+<!-- Project containers 1 to 3 (Top section) -->
+<section class="Prosjekt-Top">
+    <!-- Project 1: Current website -->
+    <div class="Project-box">
+        <div class="Project-content">
+            <!-- Image, title and description -->
+            <div class="picture">
+                <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
+            </div>  
+            <h1>Min Side</h1>
+            <p>Siden du er på nå! Det er prosjektet vi jobber med i Konseptutvikling og Programmering med Bent</p>
         </div>
+    </div>
 
-        <div class="Project-box">
-            <div class="Project-content">
-                <div class="picture">
-                    <a href="../Engelsk Nettside/index.html" target="_blank"><img src="Bilder/Engelsk_Bilde.png" alt="Screenshot of Website"></a>
-                </div>     
-                <h1>English Tourist Site</h1>
-                <p>Del av Engelsk oppgave vi fikk. Den er en Turist nettside om California. vi hadde 0 tid på den. WIP</p>
-            </div>
+    <!-- Project 2: English Tourist Site -->
+    <div class="Project-box">
+        <div class="Project-content">
+            <div class="picture">
+                <a href="../Engelsk Nettside/index.html" target="_blank"><img src="Bilder/Engelsk_Bilde.png" alt="Screenshot of Website"></a>
+            </div>     
+            <h1>English Tourist Site</h1>
+            <p>Del av Engelsk oppgave vi fikk. Den er en Turist nettside om California. vi hadde 0 tid på den. WIP</p>
         </div>
+    </div>
 
-        <div class="Project-box">
-            <div class="Project-content">
-                <a href="FotoSerie.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
-                <h1>Foto Serie</h1>
-                <p>Oppgave jeg hadde i historiefortelling</p>
-            </div>
+    <!-- Project 3: Photo Series -->
+    <div class="Project-box">
+        <div class="Project-content">
+            <a href="FotoSerie.html"><img src="" alt="Screenshot of Website"></a>
+            <h1>Foto Serie</h1>
+            <p>Oppgave jeg hadde i historiefortelling</p>
         </div>
+    </div>
+</section>
 
-
-    </section>
-
-    
+<!-- Bottom section with additional project slots (currently commented out) -->
 <!--
-    <section class="Prosjekt-Bottom">
-
-
-        <div class="Project-box">
-            <div class="Project-content">
-                <a href="#"><img src="" alt="Empty"></a>
-                <h1></h1>
-                <p></p>
-            </div>
+<section class="Prosjekt-Bottom">
+    <div class="Project-box">
+        <div class="Project-content">
+            <a href="#"><img src="" alt="Empty"></a>
+            <h1></h1>
+            <p></p>
         </div>
+    </div>
 
-        <div class="Project-box">
-            <div class="Project-content">
-                <a href="#"><img src="" alt="Empty"></a>
-                <h1></h1>
-                <p></p>
-            </div>
+
+    <div class="Project-box">
+        <div class="Project-content">
+            <a href="#"><img src="" alt="Empty"></a>
+            <h1></h1>
+            <p></p>
         </div>
+    </div>
 
-        <div class="Project-box">
-            <div class="Project-content">
-                <a href="#"><img src="" alt="Empty"></a>
-                <h1></h1>
-                <p></p>
-            </div>
+    <div class="Project-box">
+        <div class="Project-content">
+            <a href="#"><img src="" alt="Empty"></a>
+            <h1></h1>
+            <p></p>
         </div>
-
-    </section>
+    </div>
+</section>
 -->
-
-<!--Credit-->
+<!-- Footer section with image credits -->
 <footer>
     <section class="Footer-box">
         <div class="Footer-content">
@@ -118,7 +109,6 @@
                 <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/freepik" target=_blank>freepik</a></span></li>
             </ul>
         </div>
-
     </section>
 </footer>
 
