--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -16,11 +16,8 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Logg</a></li>
-                </ul>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -62,11 +59,11 @@
         <div class="log" id="december" id="Wednesday">
             <h3>Side Vurdering og diverse</h3>
             <h6>Onsdag - 18/12/2024</h6>
-            <p>N/A</p>
+            <p>Vurderte med-elev sinn side.</p>
         </div>
 
         <div class="log" id="december" id="Wednesday">
-            <h3></h3>
+            <h3>Stiler</h3>
             <h6>Onsdag - 11/12/2024</h6>
             <p>Diverse styling på log siden</p>
         </div>
