--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -16,11 +16,8 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="Om Meg.html">Om</a></li>
-            <li><a href="#">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Logg</a></li>
-                </ul>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -35,41 +32,6 @@
     <div class="Video-Center">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PahdXf6Jzf4?si=TFkdnF-Fe-Zg3g2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-  
-
-    <section class="bilde-serie">
-
-        <div class="bilde-align">
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1068.jpg" alt="">
-            </div>
-                
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1070.jpg" alt="">
-            </div>    
-
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1090.jpg" alt="">
-            </div>  
-
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1091.jpg" alt="">
-            </div>  
-
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1092.jpg" alt="">
-            </div> 
-
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1093.jpg" alt="">
-            </div>   
-
-            <div class="bilde-con">
-                <img src="Bilder/Fotoserie/IMG_1097.jpg" alt="">
-            </div>
-        </div>
-
-    </section>
 
 </body>
 </html>
