--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -14,11 +14,8 @@
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
             <li><a href="#">Om</a></li>
-            <li><a href="#">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="log.html">Logg</a></li>
-                </ul>
+            <li><a href="JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
@@ -60,15 +57,5 @@
 
 </section>
 
-    <footer>
-        <section class="credit">
-            <div class="credit-content">
-                <ul>
-                    <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
-                </ul>
-            </div>
-    
-        </section>
-    </footer>
 </body>
 </html>
