--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
             <li><a href="index.html">Hjem</a></li>
             <li><a href="Min Side/Prosjekter.html">Prosjekter</a></li>
             <li><a href="Min Side/Om Meg.html">Om</a></li>
-            <!-- Dropdown menu for "Andre" -->
-            <li><a href="#">Andre</a>
-                <ul class="dropdown">
-                    <li><a href="Min Side/JavaScript_feat_Bent.html">JS</a></li>
-                    <li><a href="Min Side/log.html">Logg</a></li>
-                </ul>
-            <!-- Dropdown menu for "Ressurser/Hjelp" -->
+            <li><a href="Min Side/JavaScript_feat_Bent.html">JavaScript</a></li>
+            <li><a href="Min Side/log.html">Logg</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
-                    <!-- External resources open in new tabs -->
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
