--- a/Min Side/FotoSerie.html
+++ b/Min Side/FotoSerie.html
@@ -28,7 +28,7 @@
             </li>
         </ul>
     </nav>
-
+    <!--Video-->
     <div class="Video-Center">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PahdXf6Jzf4?si=TFkdnF-Fe-Zg3g2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
