--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -39,10 +39,8 @@
 
 <!-- Project containers 1 to 3 (Top section) -->
 <section class="Prosjekt-Top">
-    <!-- Project 1: Current website -->
     <div class="Project-box">
         <div class="Project-content">
-            <!-- Image, title and description -->
             <div class="picture">
                 <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
             </div>  
@@ -101,6 +99,22 @@
     </div>
 </section>
 -->
+<!-- Website Outline Comparison Section -->
+<section class="outline-section">
+    <div class="outline-box">
+        <div class="outline-content">
+            <h1>Nettside Planlegging</h1>
+            <div class="outline-image">
+                <img src="Bilder/Skisse_2.png" alt="Original Website Outline">
+            </div>
+            <div class="outline-text">
+                <h2>Forskjeller mellom plan og sluttprodukt:</h2>
+                <h3></h3>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Footer section with image credits -->
 <footer>
     <section class="Footer-box">
