--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -63,7 +63,7 @@
     <!-- Project 3: Photo Series -->
     <div class="Project-box">
         <div class="Project-content">
-            <a href="FotoSerie.html"><img src="" alt="Screenshot of Website"></a>
+            <a href="FotoSerie.html"><img src="Bilder/FotoTN.JPG" alt="Screenshot of Website"></a>
             <h1>Foto Serie</h1>
             <p>Oppgave jeg hadde i historiefortelling</p>
         </div>
