--- a/Min Side/log.html
+++ b/Min Side/log.html
@@ -55,6 +55,11 @@
 
     <!-- Log Section -->
     <section class="logs" id="logSection">
+        <div class="log" id="January" id="Monday">
+            <h3>Theme, Spill og animasjoner</h3>
+            <h6>Mandag - 06/01/2025</h6>
+            <p>Gjorde theme til JavaScript Underside det same som Om og Logg. La også til små animasjoner i Prosjekter for ekstra responsivitet. Etter det la jeg til Stein saks papir spill i JavaScript og er ganske fornøyd med UIen</p>
+        </div>
 
         <div class="log" id="december" id="Wednesday">
             <h3>Side Vurdering og diverse</h3>
