--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -38,10 +38,10 @@
     </div>
     <div class="about-con">
         <div class="about-text">
-            <h1></h1>
-            <p></p>
+            <h1>Fritid</h1>
+            <p>I fritiden liker jeg å gå turer ute som oftest i regnet, det er ikke like deprimerende som det høres ut ok. Jeg er også sammen med venner men som oftest ser vi hverandre på skolen. Annet en det så er det mest spilling på PC som alle andre.</p>
             <div class="img">
-                <img src="" alt="pic">
+                <img src="" alt="">
             </div>
         </div>
     </div>
