--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -33,12 +33,12 @@
     <section class="JS-Input">
         <div class="box-pos">
             <div class="box-frame">
-                <h1>Task Manager</h1>
+                <h1>Oppgave Liste</h1>
                 <div class="box-ui-content">
-                    <input type="text" id="taskInput" placeholder="Enter new task">
+                    <input type="text" id="taskInput" placeholder="Skriv en ny oppgave">
                     <div class="button-container">
-                        <button id="addTaskButton">Add Task</button>
-                        <button id="removeTaskButton">Remove Task</button>
+                        <button id="addTaskButton">Legg til Oppgave</button>
+                        <button id="removeTaskButton">Fjern Oppgave</button>
                     </div>
                 </div>
                 <div class="box-li-content">
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="game-buttons">
-                        <button onclick="playRPS('Rock')">
+                        <button onclick="playRPS('Stein')">
                             <i class="fa-solid fa-hand-fist"></i>
                             <span>Stein</span>
                         </button>
@@ -80,7 +80,7 @@
                         </button>
                     </div>
                     
-                    <button class="reset-btn" onclick="resetGame()">Reset Game</button>
+                    <button class="reset-btn" onclick="resetGame()">Tilbakestill Spill</button>
                 </div>
             </div>
         </div>
@@ -88,10 +88,10 @@
         <!-- Reverse Text Box -->
         <div class="box-pos">
             <div class="box-frame">
-                <h1>Reverse any Text!</h1>
+                <h1>Omvendt Tekst!</h1>
                 <div class="box-ui-content">
-                    <input type="text" id="inputRev" placeholder="Type Here">
-                    <button id="revButton">Reverse!</button>
+                    <input type="text" id="inputRev" placeholder="Skriv tekst her">
+                    <button id="revButton">Kjør!</button>
                 </div>
             </div>
         </div>
