--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -47,7 +47,7 @@
     </div>
     <div class="about-con">
         <div class="about-text">
-            <h1></h1>
+            <h1>Utdanning</h1>
             <p></p>
             <div class="img">
                 <img src="" alt="pic">
