--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -49,7 +49,7 @@
 
         <!--Rock Paper Scissors-->
         <div class="box-pos">
-            <div class="box-frame game-box">
+            <div class="box-frame">
                 <h1>Stein Saks Papir</h1>
                 <div class="game-container">
                     <div class="score-board">
