--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -50,7 +50,7 @@
             <h1>Utdanning</h1>
             <p></p>
             <div class="img">
-                <img src="" alt="pic">
+                <img src="" alt="">
             </div>
         </div>
     </div>
