--- a/Min Side/bent.html
+++ b/Min Side/bent.html
@@ -13,6 +13,6 @@
         </div>  
     </div>
     
-    <h2>BENT</h2>
+    <a href="https://www.github.com/handerre"><h2>BENT</h2></a>
 </body>
 </html>
