--- a/Skjema Side/index.html
+++ b/Skjema Side/index.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skjema</title>
+    <title>Avfallshåndtering</title>
     <link rel="stylesheet" href="CSS/index.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTIhhyRBpJ04otG1If2vJyVrX5yV4IzMJEKFTVRxM45LbXuQ/viewform?embedded=true" width="640" height="2532" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    
+    <header>
+        <h1>Avfallshåndtering</h1>
+        <p>Hold oversikt over ditt daglige avfall og test kunnskapen din!</p>
+    </header>
+
+    <main>
+        <!-- Interactive Table -->
+        <section id="table-section">
+            <h2>Daglig avfall (kg)</h2>
+            <form id="data-form">
+                <label for="day">Dag:</label>
+                <select id="day" required>
+                    <option value="Mandag">Mandag</option>
+                    <option value="Tirsdag">Tirsdag</option>
+                    <option value="Onsdag">Onsdag</option>
+                    <option value="Torsdag">Torsdag</option>
+                    <option value="Fredag">Fredag</option>
+                    <option value="Lørdag">Lørdag</option>
+                    <option value="Søndag">Søndag</option>
+                </select>
+
+                <label for="weight">Avfall (kg):</label>
+                <input type="number" id="weight" min="0" step="0.1" required>
+
+                <button type="submit">Legg til</button>
+            </form>
+
+            <table id="data-table">
+                <thead>
+                    <tr>
+                        <th>Dag</th>
+                        <th>Avfall (kg)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+            <canvas id="chart" width="400" height="200"></canvas>
+        </section>
+
+        <!-- Quiz Section -->
+        <section id="quiz-section">
+            <h2>Sorteringsquiz</h2>
+            <p>Hvor skal disse tingene sorteres?</p>
+            <div id="quiz-container">
+                <p id="question"></p>
+                <button class="quiz-btn" data-answer="Restavfall">Restavfall</button>
+                <button class="quiz-btn" data-answer="Papir">Papir</button>
+                <button class="quiz-btn" data-answer="Plast">Plast</button>
+                <p id="quiz-feedback"></p>
+            </div>
+        </section>
+    </main>
+
+    <script src="JavaScript/JS.js"></script>
+    <p id="ip-address"></p>
 </body>
 </html>
