--- a/Skjema Side/index.html
+++ b/Skjema Side/index.html
@@ -1,75 +1,171 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avfallshåndtering</title>
-    <link rel="stylesheet" href="CSS/index.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Avfallshåndtering</title>
+	<link rel="stylesheet" href="CSS/index.css">
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-
-    <header>
-        <h1>Avfallshåndtering</h1>
-        <p>Hold oversikt over ditt daglige avfall og test kunnskapen din!</p>
-    </header>
+	<header>
+    	<h1>Avfallshåndtering</h1>
+    	<p>Hold oversikt over ditt daglige avfall og test kunnskapen din!</p>
+	</header>
     
-    <main>
-        <!-- Interactive Table -->
-        <section id="table-section">
-            <h2>Daglig avfall (kg)</h2>
-            <form id="data-form">
-                <label for="day">Dag:</label>
-                <select id="day" required>
-                    <option value="Mandag">Mandag</option>
-                    <option value="Tirsdag">Tirsdag</option>
-                    <option value="Onsdag">Onsdag</option>
-                    <option value="Torsdag">Torsdag</option>
-                    <option value="Fredag">Fredag</option>
-                    <option value="Lørdag">Lørdag</option>
-                    <option value="Søndag">Søndag</option>
-                </select>
+	<main>
+    	<!-- Ny skriftlig del: Problemstilling -->
+    	<section id="problemstilling">
+        	<h2>Problemstilling</h2>
+        	<p>Hvordan kan vi forbedre kildesorteringen i Norge for å redusere avfall og øke bærekraft?</p>
+    	</section>
 
-                <label for="weight">Avfall (kg):</label>
-                <input type="number" id="weight" min="0" step="0.1" required>
+	<!-- Skrevet del -->
+    <section>
+        <h2>Hvordan kildesorterer man?</h2>
+        <p>Kilder til hvordan man skal kildesortere, samt svarene som ble samlet inn:</p>
+        <ul>
+            <li>Kaster alt i samme bosspan - 10 svar (37%)</li>
+            <li>Sorterer avfall i forskjellige søppelspan - 9 svar (33.3%)</li>
+            <li>Sorterer kildene sine alfabetisk - 2 svar (7.4%)</li>
+            <li>Spise - 6 svar (22.2%)</li>
+        </ul>
+    </section>
 
-                <button type="submit">Legg til</button>
-            </form>
+    <!-- Graf for "Hvordan kildesorterer man?" -->
+    <section>
+        <h3>Graf - Hvordan kildesorterer man?</h3>
+        <canvas id="sortingMethodsChart" width="400" height="200"></canvas>
+    </section>
 
-            <table id="data-table">
-                <thead>
-                    <tr>
-                        <th>Dag</th>
-                        <th>Avfall (kg)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+    <section>
+        <h2>Er det viktig å kildesortere?</h2>
+        <ul>
+            <li>Ja - 3 svar (11.1%)</li>
+            <li>Ja, Selvfølgelig - 6 svar (22.2%)</li>
+            <li>100% Nei - 12 svar (44.4%)</li>
+            <li>Egentlig ikke - 6 svar (22.2%)</li>
+        </ul>
+    </section>
 
-            <canvas id="chart" width="400" height="200"></canvas>
-        </section>
+    <!-- Graf for "Er det viktig å kildesortere?" -->
+    <section>
+        <h3>Graf - Er det viktig å kildesortere?</h3>
+        <canvas id="importanceChart" width="400" height="200"></canvas>
+    </section>
 
-        <!-- Quiz Section -->
-        <section id="quiz-section">
-            <h2>Sorteringsquiz</h2>
-            <p>Hvor skal disse tingene sorteres?</p>
-            <div id="quiz-container">
-                <p id="question-counter">Spørsmål 1 av 8</p>
-                <p id="question"></p>
-                <button class="quiz-btn" data-answer="Restavfall">Restavfall</button>
-                <button class="quiz-btn" data-answer="Papir">Papir</button>
-                <button class="quiz-btn" data-answer="Plast">Plast</button>
-                <button class="quiz-btn" data-answer="Glass">Glass</button>
-                <button class="quiz-btn" data-answer="Farlig Avfall">Farlig Avfall</button>
-                <button class="quiz-btn" data-answer="Metal">Metal</button>
-                <button class="quiz-btn" data-answer="Elektrisk avfall">Elektrisk Avfall</button>
-                <p id="quiz-feedback"></p>
-            </div>
-        </section>
-    </main>
+    <section>
+        <h2>Hvor viktig er det å kildesortere? (fra 1 til 7 stjerner)</h2>
+        <ul>
+            <li>1 stjerne - 13 svar (48.1%)</li>
+            <li>2 stjerner - 2 svar (7.4%)</li>
+            <li>3 stjerner - 1 svar (3.7%)</li>
+            <li>4 stjerner - 1 svar (3.7%)</li>
+            <li>5 stjerner - 2 svar (7.4%)</li>
+            <li>6 stjerner - 1 svar (3.7%)</li>
+            <li>7 stjerner - 7 svar (25.9%)</li>
+        </ul>
+    </section>
 
-    <script src="JavaScript/JS.js"></script>
-    <p id="ip-address"></p>
+    <!-- Graf for "Hvor viktig er det å kildesortere?" -->
+    <section>
+        <h3>Graf - Hvor viktig er det å kildesortere?</h3>
+        <canvas id="importanceStarRatingChart" width="400" height="200"></canvas>
+    </section>
+
+    <section>
+        <h2>Kildesorterer du?</h2>
+        <ul>
+            <li>Ja - 7 svar (25.7%)</li>
+            <li>Nei - 12 svar (44.4%)</li>
+            <li>Ikke hjemme, men gjør på skolen eller andre steder hvis de har slike kildesorterings systemer - 4 svar (14.8%)</li>
+            <li>Kildesorterer noen ting men ikke alle - 4 svar (14.8%)</li>
+        </ul>
+    </section>
+
+    	<!-- Ny skriftlig del: Konklusjon -->
+    	<section id="konklusjon">
+        	<h2>Konklusjon</h2>
+        	<p>Undersøkelsen viser at mange fortsatt ikke sorterer avfallet sitt på en bærekraftig måte. Det er behov for bedre opplæring og insentiver for å øke kildesortering blant befolkningen.</p>
+    	</section>
+
+        <section id="letter-to-prime-minister">
+			<h2>Letter to the Prime Minister</h2>
+			<p>Dear Prime Minister Jonas Gahr Støre,</p>
+			<p>
+				I am writing to urge you to take more action on improving the way we handle food waste and recycling in Norway. Despite significant efforts, there is still a large amount of waste that goes to landfills, which could instead be recycled or composted. Encouraging businesses and citizens to separate their waste more efficiently could lead to significant environmental benefits.
+			</p>
+			<p>
+				I believe we could also do more to promote recycling technologies and improve the infrastructure available for waste sorting in public spaces. By implementing more user-friendly sorting systems, we can reduce contamination and improve the effectiveness of recycling programs.
+			</p>
+			<p>Yours sincerely, [Your Name]</p>
+		</section>
+
+    	<!-- Muntlig del -->
+    	<section id="lydopptak">
+        	<h2>Muntlig del</h2>
+        	<p>Lytt til denne presentasjonen om viktigheten av kildesortering:</p>
+        	<audio controls>
+            	<source src="audio/presentasjon.mp3" type="audio/mpeg">
+            	Nettleseren din støtter ikke denne lydspilleren.
+        	</audio>
+    	</section>
+
+    	<!-- Interaktive deler: Daglig avfall -->
+    	<section id="table-section">
+        	<h2>Daglig avfall (kg)</h2>
+        	<form id="data-form">
+            	<label for="day">Dag:</label>
+            	<select id="day" required>
+                	<option value="Mandag">Mandag</option>
+                	<option value="Tirsdag">Tirsdag</option>
+                	<option value="Onsdag">Onsdag</option>
+                	<option value="Torsdag">Torsdag</option>
+                	<option value="Fredag">Fredag</option>
+                	<option value="Lørdag">Lørdag</option>
+                	<option value="Søndag">Søndag</option>
+            	</select>
+
+            	<label for="weight">Avfall (kg):</label>
+            	<input type="number" id="weight" min="0" step="0.1" required>
+
+            	<button type="submit">Legg til</button>
+        	</form>
+
+        	<table id="data-table">
+            	<thead>
+                	<tr>
+                    	<th>Dag</th>
+                    	<th>Avfall (kg)</th>
+                	</tr>
+            	</thead>
+            	<tbody>
+            	</tbody>
+        	</table>
+
+        	<canvas id="chart" width="400" height="200"></canvas>
+    	</section>
+
+    	<!-- Interaktive deler: Quiz -->
+    	<section id="quiz-section">
+        	<h2>Sorteringsquiz</h2>
+        	<p>Hvor skal disse tingene sorteres?</p>
+        	<div id="quiz-container">
+            	<p id="question-counter">Spørsmål 1 av 8</p>
+            	<p id="question"></p>
+            	<button class="quiz-btn" data-answer="Restavfall">Restavfall</button>
+            	<button class="quiz-btn" data-answer="Papir">Papir</button>
+            	<button class="quiz-btn" data-answer="Plast">Plast</button>
+            	<button class="quiz-btn" data-answer="Glass">Glass</button>
+            	<button class="quiz-btn" data-answer="Farlig Avfall">Farlig Avfall</button>
+            	<button class="quiz-btn" data-answer="Metal">Metal</button>
+            	<button class="quiz-btn" data-answer="Elektrisk avfall">Elektrisk Avfall</button>
+            	<p id="quiz-feedback"></p>
+        	</div>
+    	</section>
+	</main>
+
+	<script src="JavaScript/JS.js"></script>
+	<p id="ip-address"></p>
 </body>
 </html>
