--- a/Skjema Side/index.html
+++ b/Skjema Side/index.html
@@ -32,12 +32,6 @@
         </ul>
     </section>
 
-    <!-- Graf for "Hvordan kildesorterer man?" -->
-    <section>
-        <h3>Graf - Hvordan kildesorterer man?</h3>
-        <canvas id="sortingMethodsChart" width="400" height="200"></canvas>
-    </section>
-
     <section>
         <h2>Er det viktig å kildesortere?</h2>
         <ul>
@@ -46,12 +40,6 @@
             <li>100% Nei - 12 svar (44.4%)</li>
             <li>Egentlig ikke - 6 svar (22.2%)</li>
         </ul>
-    </section>
-
-    <!-- Graf for "Er det viktig å kildesortere?" -->
-    <section>
-        <h3>Graf - Er det viktig å kildesortere?</h3>
-        <canvas id="importanceChart" width="400" height="200"></canvas>
     </section>
 
     <section>
@@ -65,12 +53,6 @@
             <li>6 stjerner - 1 svar (3.7%)</li>
             <li>7 stjerner - 7 svar (25.9%)</li>
         </ul>
-    </section>
-
-    <!-- Graf for "Hvor viktig er det å kildesortere?" -->
-    <section>
-        <h3>Graf - Hvor viktig er det å kildesortere?</h3>
-        <canvas id="importanceStarRatingChart" width="400" height="200"></canvas>
     </section>
 
     <section>
@@ -98,7 +80,7 @@
 			<p>
 				I believe we could also do more to promote recycling technologies and improve the infrastructure available for waste sorting in public spaces. By implementing more user-friendly sorting systems, we can reduce contamination and improve the effectiveness of recycling programs.
 			</p>
-			<p>Yours sincerely, [Your Name]</p>
+			<p>Yours Truely, Viggo</p>
 		</section>
 
     	<!-- Muntlig del -->
