guh almost done

--- a/Skjema Side/index.html
+++ b/Skjema Side/index.html
@@ -73,20 +73,20 @@
 
         <section id="letter-to-prime-minister">
 			<h2>Letter to the Prime Minister</h2>
-			<p>Dear Prime Minister Jonas Gahr Støre,</p>
-			<p>
-				I am writing to urge you to take more action on improving the way we handle food waste and recycling in Norway. Despite significant efforts, there is still a large amount of waste that goes to landfills, which could instead be recycled or composted. Encouraging businesses and citizens to separate their waste more efficiently could lead to significant environmental benefits.
-			</p>
-			<p>
-				I believe we could also do more to promote recycling technologies and improve the infrastructure available for waste sorting in public spaces. By implementing more user-friendly sorting systems, we can reduce contamination and improve the effectiveness of recycling programs.
-			</p>
-			<p>Yours Truely, Viggo</p>
+			<h3>Dear Prime Minister Jonas Gahr Støre,</h3>
+			<p>I am writing to urge you to take stronger action in improving the way we handle waste and recycling in Norway. While progress has been made, a significant portion of waste continues to go to landfills, which could be recycled or composted instead.</p>
+            <p>Despite awareness campaigns, many people still struggle with properly sorting their waste, and contamination of recyclable materials remains a significant issue. There is also a lack of consistent waste sorting infrastructure in public spaces, residential areas, and businesses. I strongly believe that improving recycling systems and making it easier for citizens to sort their waste will reduce contamination and increase recycling rates.</p>
+            <p>Public education is a key factor in solving this issue. Many people are still unsure of what materials can be recycled, especially when it comes to hazardous waste. Expanding education and outreach, particularly through schools and community programs, could help foster better waste sorting habits.</p>
+            <p>Another concern is food waste. Nearly a third of food produced globally is wasted, and Norway is no exception. Encouraging households and businesses to compost more effectively and reduce food waste would significantly reduce our environmental impact and promote sustainable practices.</p>
+            <p>I also suggest promoting advancements in recycling technologies. By investing in more efficient recycling methods, Norway could become a global leader in sustainability, reducing the need for new raw materials and minimizing waste.</p>
+            <p>Thank you for your time and consideration. I trust you will give this important issue the attention it deserves.</p>
+            <p>Yours truley, Viggo.</p>
 		</section>
 
     	<!-- Muntlig del -->
     	<section id="lydopptak">
         	<h2>Muntlig del</h2>
-        	<p>Lytt til denne presentasjonen om viktigheten av kildesortering:</p>
+        	<p>Ikke ferdig, womp womp</p>
         	<audio controls>
             	<source src="audio/presentasjon.mp3" type="audio/mpeg">
             	Nettleseren din støtter ikke denne lydspilleren.
