--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -63,25 +63,26 @@
     <!-- Project 3: Photo Series -->
     <div class="Project-box">
         <div class="Project-content">
-            <a href="FotoSerie.html"><img src="Bilder/FotoTN.JPG" alt="Screenshot of Website"></a>
+            <a href="FotoSerie.html"><img src="Bilder/Fotoserie/IMG_1068.jpg" alt="Screenshot of Website"></a>
             <h1>Foto Serie</h1>
             <p>Oppgave jeg hadde i historiefortelling</p>
         </div>
     </div>
 </section>
 
-<!-- Bottom section with additional project slots (currently commented out) -->
-<!--
+
+
 <section class="Prosjekt-Bottom">
     <div class="Project-box">
         <div class="Project-content">
-            <a href="#"><img src="" alt="Empty"></a>
-            <h1></h1>
-            <p></p>
+            <a href="../Skjema Side/index.html"><img src="Bilder/Tverfagelig.png" alt="Empty"></a>
+            <h1>Tverfagelig Prosjekt</h1>
+            <p>Side om kildesortering</p>
         </div>
     </div>
 
-
+<!-- Bottom section with additional project slots (currently commented out) -->
+ <!--
     <div class="Project-box">
         <div class="Project-content">
             <a href="#"><img src="" alt="Empty"></a>
@@ -106,10 +107,6 @@
             <h1>Nettside Planlegging</h1>
             <div class="outline-image">
                 <img src="Bilder/Skisse_2.png" alt="Original Website Outline">
-            </div>
-            <div class="outline-text">
-                <h2>Forskjeller mellom plan og sluttprodukt:</h2>
-                <h3></h3>
             </div>
         </div>
     </div>
