--- a/Min Side/JavaScript_feat_Bent.html
+++ b/Min Side/JavaScript_feat_Bent.html
@@ -62,7 +62,7 @@
                     <div class="game-status">
                         <p>Spiller Valgte: <span id="player-choice">-</span></p>
                         <p>Robot Valgte: <span id="computer-choice">-</span></p>
-                        <p class="result" id="game-result">Velg en av kn!</p>
+                        <p class="result" id="game-result">Velg en av kappene!</p>
                     </div>
 
                     <div class="game-buttons">
