--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -34,7 +34,7 @@
             <h1>Meg</h1>
             <p>Hei, mitt navn er Viggo og jeg går på Amalie Skram Vidergående skole. Der går jeg Informasjonsteknologi og Medieproduksjons linjen (IM).</p>
         </div>
-        <img src="bilder/Amalie vgs.png" alt="pic">
+        <img src="Bilder/Amalie vgs.png" alt="pic">
     </div>
     <div class="about-con">
         <div class="about-text">
